<resources>
  <string name="app_name">TCBaseArchitecture</string>
  <string name="app_name_mine">TCBaseArchitecture</string>

  <string name="me">Tomáš Chlápek</string>

  <string name="sample_button">go</string>
  <string name="sample_onboarding_title">sample_onboarding_title</string>
  <string name="sample_onboarding_body">sample_onboarding_body</string>

  <string name="sample_onboarding_page_one_title">Page one title</string>
  <string name="sample_onboarding_page_one_message">Page one message</string>

  <string name="sample_onboarding_page_two_title">Page two title</string>
  <string name="sample_onboarding_page_two_message">Page two message</string>

  <string name="sample_onboarding_page_three_title">Page three title</string>
  <string name="sample_onboarding_page_three_message">Page three message</string>

  <string name="sample_onboarding_positive_button">Allow</string>
  <string name="sample_onboarding_negative_button">Not now</string>

  <string name="sample_continue_button_text">Continue</string>
  <string name="sample_negative_button_text">No</string>
  <string name="sample_positive_button_text">Yes</string>
  <string name="sample_toast_permission_request">Permission dialog</string>

  <string name="sample_sign_email">Email</string>
  <string name="sample_sign_pass">Password</string>
  <string name="sample_sign_invalid_email">Invalid email</string>
  <string name="sample_sign_invalid_pass">Invalid password</string>
  <string name="sample_sign_invalid_credentials">Invalid credentials</string>

  <string name="sample_sign_in_link">No account yet? Create one</string>
  <string name="sample_sign_in_button">Login</string>
  <string name="sample_sign_up_button">Sign up</string>

  <string name="menu_share">Share</string>
  <string name="menu_forget_pass">Forget pass</string>
  <string name="menu_skip">Skip</string>
  <string name="menu_settings">Settings</string>
  <string name="text_sample">Sample</string>
  <string name="text_map">Map</string>
  <string name="text_chat">Chat</string>
  <string name="action_search">Search</string>

  <string name="toolbar_sample">Sample</string>
  <string name="toolbar_map">Map</string>
  <string name="toolbar_sign_in">Sign in</string>
  <string name="toolbar_sign_up">Sign up</string>
  <string name="toolbar_chat">Chat</string>
  <string name="toolbar_settings">Settings</string>

  <string name="image_dialog_chooser">Choose between camera or gallery</string>
  <string name="email_dialog_chooser">Choose email client</string>
  <string name="image_dialog_denied">Permission not granted</string>
  <string name="permission_not_granted">Permission not granted</string>

  <string name="general_error_message">General error</string>
  <string name="filter_reset">Reset</string>
  <string name="filter_sort_by">Sort</string>
  <string name="filter_by_date">Date</string>
  <string name="filter_by_price">Price</string>
  <string name="filter_search">Search</string>
  <string name="location_error">Location error</string>
  <string name="empty_no_connection">No connection</string>
  <string name="empty_try_again">Try again</string>

  <string name="notification_title_custom">Custom notification title</string>
  <string name="notification_title_general">General notification title</string>
  <string name="notification_title_none">-</string>

  <string name="notification_title_offer">New offer</string>
  <string name="notification_message_offer">You have new offer for your demand from %1$s</string>

  <string name="notification_channel_offers">Offer channel</string>
  <string name="notification_channel_ratings">Channel rating</string>

  <string name="notification_title_rating">New rating</string>
  <string name="notification_message_rating">You have new rating from %1$s</string>
  <string name="not_implemented_yet">Not implemented yet.</string>
  <string name="verify_account_title">Verification compulsory</string>
  <string name="verify_account_message">Verify your e-mail for continuation</string>
  <string name="send_email">Send email</string>
  <string name="email_sent">Email sent</string>
  <string name="email_not_sent">Email not sent</string>
  <string name="open_email">Open email</string>


</resources>
