<?xml version="1.0" encoding="utf-8"?>
<layout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  >

  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="@dimen/margin_giga">


      <ImageView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/sample_sign_in_image_height"
        android:layout_marginBottom="@dimen/margin_giga"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/ic_launcher"/>

      <!-- Email Label -->
      <android.support.design.widget.TextInputLayout
        android:id="@+id/sample_sign_up_email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_medium">

        <android.support.design.widget.TextInputEditText
          android:id="@+id/sample_sign_up_email_edit_text"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/sample_sign_email"
          android:inputType="textEmailAddress"/>
      </android.support.design.widget.TextInputLayout>

      <!-- Password Label -->
      <android.support.design.widget.TextInputLayout
        android:id="@+id/sample_sign_up_pass_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_medium"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
          android:id="@+id/sample_sign_up_pass_edit_text"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/sample_sign_pass"
          android:inputType="textPassword"/>
      </android.support.design.widget.TextInputLayout>

      <Button
        style="@style/Widget.AppCompat.Button.Colored"
        android:id="@+id/sample_sign_up_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_giga"
        android:layout_marginBottom="@dimen/margin_giga"
        android:padding="@dimen/margin_large"
        android:text="@string/sample_sign_up_button"
        android:theme="@style/Button.Active"/>

    </LinearLayout>
  </ScrollView>

</layout>